header wrap fixes

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ footer {
 
 header a {
   padding: 12px 4px;
+  line-height: 2.8em;
 }
 
 .md-pages {
